<resources>
  <string name="app_name">Ig Observer</string>

  <string name="new_post">%s has just added a new post.</string>
  <string name="removed_post">%s has just removed a post.</string>

  <string name="new_follower">%s has %d new follower(s). Total: %d.</string>
  <string name="lost_follower">%s has just lost %d follower(s). Total: %d.</string>

  <string name="bio_changed">%s has just changed his biography.</string>

  <string name="new_post_comment">%s has just received a new comment from %s.</string>
  <string name="lost_post_comment">%s has just lost a comment from %s.</string>

  <string name="profile_picture_changed">%s has just changed his profile picture.</string>

  <string name="change_to_private">% has just changed his account to private.</string>
  <string name="change_to_private_i">Unfortunately, from now on you will only able to observe %s\'s number of followers, biography and profile picture.</string>
  <string name="change_to_public">% has just changed his account to public.</string>
  <string name="change_to_public_i">Great, from now on you will able to access all features of IgObserver.</string>

  <string name="new_story">% has just added a new story.</string>
  <string name="blocked_story">Attempted to view %s stories, but failed. It is possible that you have been blocked by this person.</string>

  <!-- Settings -->
  <string name="s_story">Viewing Instagram stories requires user to be signed in, therefore if you want to access this feature we suggest you to use built-in login functionality.
   You will be informed as soon as observed person adds new story. Moreover, you can also view their stories without being displayed on list of users who viewed it!</string>
  <string name="title_activity_settings">Settings</string>

  <!-- Strings related to Settings -->
  <string name="action_settings">Settings</string>
  <string name="key_notifications_category">key_notifications_category</string>

  <string name="title_enable_notifications">Enable notifications</string>
  <string name="summary_enable_notifications">Show notifications for all observed accounts</string>
  <string name="key_enable_notifications">key_enable_notifications</string>

  <!-- Privacy Policy -->
  <string name="pref_header_about">About</string>
  <string name="summary_about">Made with ❤ by <a href="https://www.instagram.com/niewinskipiotr/">@niewinskipiotr</a>
    \n\nNot affiliated with Instagram and we do not store any of the Instagram data, all rights belong to their respective owners.
    \n\nCopyright © 2019 IgObserver Inc.
    \nAll rights reserved.</string>

  <string name="pref_header_privacy_policy">Privacy Policy</string>
  <string name="summary_privacy_policy">Click to view</string>
  <string name="privacy_policy"><b>Last update: October 21, 2019</b>
    \nThis Privacy Policy sets forth IgObserver policy with respect to information including personally identifiable data ("Personal Data") and other information that is collected from visitors to the Site and Services.

    \n\n<b>Information We Collect</b>
    \nWe collect Personal Data from you when you voluntarily provide such information, such as when you contact us with inquiries, respond to one of our surveys, register for access to the Services or use certain Services.
    \n\nBy voluntarily providing us with Personal Data, you are consenting to our use of it in accordance with this Privacy Policy.
    \n\nWhen you interact with IgObserver through the Services, we receive and store certain personally non-identifiable information. Such information, which is collected passively using various technologies, cannot presently be used to specifically identify you.
    IgObserver may store such information itself or such information may be included in databases owned and maintained by IgObserver affiliates, agents or service providers.
    The Services may use such information and pool it with other information to track, for example, the total number of visitors to our Site, the number of visitors to each page of our Site, and the domain names of our visitors Internet service providers. It is important to note that no Personal Data is available or used in this process.
    \n\nIn operating the Services, we may use a technology called "cookies." A cookie is a piece of information that the computer that hosts our Services gives to your browser when you access the Services. Our cookies help provide additional functionality to the Services and help us analyze Services usage more accurately.
    For instance, our Site may set a cookie on your browser that allows you to access the Services without needing to remember and then enter a password more than once during a visit to the Site. In all cases in which we use cookies, we will not collect Personal Data except with your permission.
    On most web browsers, you will find a "help" section on the toolbar. Please refer to this section for information on how to receive notification when you are receiving a new cookie and how to turn cookies off. We recommend that you leave cookies turned on because they allow you to take advantage of some of the Service features.

    \n\n<b>Our Use of Your Personal Data and Other Information</b>
    \nIgObserver uses the Personal Data you provide in a manner that is consistent with this Privacy Policy. If you provide Personal Data for a certain reason, we may use the Personal Data in connection with the reason for which it was provided. For instance, if you contact us by email, we will use the Personal Data you provide to answer your question or resolve your problem.

    \n\n<b>Our Disclosure of Your Personal Data and Other Information</b>
    \nIgObserver is not in the business of selling your information. We consider this information to be a vital part of our relationship with you.
  </string>

  <!-- Notifications -->
  <string name="pref_title_notifications">Notifications</string>
  <string name="title_notification_biography">Biography</string>
  <string name="key_notification_biography">key_notification_biography</string>
  <string name="title_notification_posts">Posts</string>
  <string name="key_notification_posts">key_notification_posts</string>
  <string name="title_notification_picture">Profile picture</string>
  <string name="key_notification_picture">key_notification_picture</string>
  <string name="title_notification_follows">Follows</string>
  <string name="key_notification_follows">key_notification_follows</string>
  <string name="title_notification_followed_by">Followed by</string>
  <string name="key_notification_followed_by">key_notification_followed_by</string>
  <string name="title_notification_account_status">Account status (private/public)</string>
  <string name="key_notification_account_status">key_notification_account_status</string>
  <string name="title_notification_has_stories">Has any stories</string>
  <string name="key_notification_has_stories">key_notification_has_stories</string>
</resources>
