<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="General">
    <SwitchPreference
      android:defaultValue="true"
      android:key="@string/key_enable_notifications"
      android:summary="@string/summary_enable_notifications"
      android:title="@string/title_enable_notifications"/>
  </PreferenceCategory>

  <PreferenceCategory
    android:title="@string/pref_title_notifications"
    android:key="@string/key_notifications_category">
    <SwitchPreference
      android:defaultValue="true"
      android:key="@string/key_notification_biography"
      android:title="@string/title_notification_biography"/>
    <SwitchPreference
      android:defaultValue="true"
      android:key="@string/key_notification_posts"
      android:title="@string/title_notification_posts"/>
    <SwitchPreference
      android:defaultValue="true"
      android:key="@string/key_notification_picture"
      android:title="@string/title_notification_picture"/>
    <SwitchPreference
      android:defaultValue="true"
      android:key="@string/key_notification_follows"
      android:title="@string/title_notification_follows"/>
    <SwitchPreference
      android:defaultValue="true"
      android:key="@string/key_notification_followed_by"
      android:title="@string/title_notification_followed_by"/>
    <SwitchPreference
      android:defaultValue="true"
      android:key="@string/key_notification_account_status"
      android:title="@string/title_notification_account_status"/>
    <SwitchPreference
      android:defaultValue="true"
      android:key="@string/key_notification_has_stories"
      android:title="@string/title_notification_has_stories"/>
  </PreferenceCategory>
</PreferenceScreen>