<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/pref_header_about">
    <Preference
      android:key="pref_header_about"
      android:autoLink="web"
      android:clickable="true"
      android:summary="@string/summary_about">
      <intent
        android:action="android.intent.action.VIEW"
        android:data="https://www.instagram.com/niewinskipiotr/"
        />
    </Preference>
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/pref_header_privacy_policy">
    <Preference
      android:key="pref_header_privacy_policy"
      android:clickable="true"
      android:summary="@string/privacy_policy">
    </Preference>
  </PreferenceCategory>
</PreferenceScreen>